Completed docker primer

--- a/docker_ex3/docker-compose.yml
+++ b/docker_ex3/docker-compose.yml
@@ -4,10 +4,15 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
-  # TODO: add your code here (delete this line and follow the indent conventions)
   app:
-    # TODO: you will need to add to this
+    build: ./backend
+    ports:
+      - "9900:9900"
     environment:
       - REDIS_HOST=redis
   frontend:
-    # TODO: you will need to add to this
+    build: ./frontend
+    ports:
+      - "3901:3000"
+    depends_on:
+      - app
